[gd_scene load_steps=10 format=3 uid="uid://cgarwubfsc2y1"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_b4vpj"]
[ext_resource type="Texture2D" uid="uid://bqpmjof7aralq" path="res://sprites/player1/player1.png" id="2_bnwst"]
[ext_resource type="PackedScene" uid="uid://cj00bdp06rl7c" path="res://scenes/player_weapons.tscn" id="3_hyg7v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_85kh6"]
atlas = ExtResource("2_bnwst")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o136l"]
atlas = ExtResource("2_bnwst")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j0ws"]
atlas = ExtResource("2_bnwst")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oviw"]
atlas = ExtResource("2_bnwst")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_5lky1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85kh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o136l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6j0ws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oviw")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1amkn"]
size = Vector2(10, 12)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_b4vpj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5lky1")
autoplay = "default"
frame_progress = 0.142072

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_1amkn")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_1amkn")

[node name="PlayerWeapons" parent="." instance=ExtResource("3_hyg7v")]

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
